# RemoteMCPServerWithOAuth2-

./: Procfile  README.md  fastmcp_server.py  oauth_fix.html  pyproject.toml  requirements.txt  requirements_fastmcp.txt  start_fastmcp.sh
templates/: debug.html  index.html  success.html
tests/: __init__.py  test_comprehensive_oauth.py  test_dynamic_client_registration.py  test_oauth_flow_complete.py
